2002-10-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/internals.itely:
	* Documentation/user/refman.itely: Run texinfo-all-menus-update.

	* lily/parser.yy: Identify shift/reduce problems.

	* input/mutopia/W.A.Mozart/mozart-hrn3-defs.ly: Rename
	make-style-sheet.  Too specific for convert-ly?

2002-10-14  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* po/cs.po: added czech translation, courtesy Tomas Kopecek.

	* input/test/*.ly: various fixes.

	* lily/music.cc (name): bugfix

	* lily/piano-pedal-engraver.cc (try_music): fix pedals.

	* lily/input-file-results.cc (code): set-point-and-click! ->
	set-point-and-click
	
2002-10-13  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Use uniform ly: prefix for exported scheme primitive functions.

	* scm/music-types.scm: junk compat glue

	* scripts/convert-ly.py: add rules for stuff below, junk
	compatibility glue for spanrequest.

	* lily/parser.yy (verbose_event): remove \spanrequest,
	\commandspanrequest, \script. 
	
	* lily/identifier-smob.cc (LY_DEFINE): change name to ly-export

	* lily/parser.yy: remove arpeggio keyword; use identifier. Idem
	for \penalty, \glissando.

2002-10-13  Rune Zedeler  <rune@zedeler.dk>

	* lily/accidental-engraver.cc: Fix
	grace-in-the-beginning-of-measure bug caused by the resent
	partial-measure fix.

	* lily/stem.cc: reversed noteheads overlap half of the stem. (Full
	overlap looks too crowded)
	
2002-10-13  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/parser.yy (assignment): allow SCM expression as assignment.

	* lily/include/music-output-def.hh (class Music_output_def):
	* lily/music-output-def.cc: 
	* lily/paper-def.cc: 
	* scm/font.scm (markup-to-properties):
	* lily/parser.yy (music_output_def_body): 
	remove style_sheet_

2002-10-12  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* ly/grace-init.ly (startGraceMusic): shorten default grace stem
	length.

	* input/regression/spacing-to-grace.ly: new file.

	* input/regression/spacing-end-of-line.ly: new file.
