@@ -1,3 +1,10 @@
+2002-10-14  Rune Zedeler  <rune@zedeler.dk>
+
+	* input/test/blank-notes.ly: bugfix
+
+	* lily/rest.cc (after_line_breaking): bugfix: dots after whole
+	rests. (Kim Shrier)
+	
 2002-10-14  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* Documentation/user/internals.itely:
